CHANGES IN FLTK 1.1.5rc2

	- Documentation updates (STR #365)
	- The Fl_Text_Display widget did not redraw selections
	  when focus changed (STR #390)
	- The plastic background image is now less contrasty
	  (STR #394)
	- Fl_Scroll now uses a full redraw when the scheme is
	  set to plastic and the box type is a frame (STR #205)
	- Fl_Window::resize() did not work properly with KDE 3.2
	  (STR #356)
	- FLTK didn't delete font bitmaps when the last OpenGL
	  window was deleted, preventing future text from
	  displaying (STR #310)
	- FLUID didn't include a full initialization record for
	  the trailing NULL menu items (STR #375)
	- Fl_Browser::item_width() did not properly handle
	  format modifiers (STR #372)
	- Fl_Browser::item_height() did not handle columns
	  properly (STR #371)
	- Fl_Gl_Window's on WIN32 now prefer accelerated pixel
	  formats over generic formats (STR #382)
	- Fl_Window::resize() did not work on some systems if
	  the window was not shown (STR #373)
	- FLUID did not write the user_data type if the
	  user_data field was empty (STR #374)
	- The value(const Fl_Menu_Item*) method was not
	  implemented for Fl_Choice (STR #366)
        - Fl_Pack didn't draw child widget labels the same way
          as Fl_Group, causing display problems (STR #360)
        - fl_read_image() didn't work when reading from an
          offscreen buffer with some X11 servers (STR #364)


CHANGES IN FLTK 1.1.5rc1

	- Documentation updates (STR #245, STR #250, STR #277,
	  STR #281, STR #328, STR #338)
	- fl_scroll() did not handle scrolling from off-screen on
	  WIN32 (STR #315)
	- Fl_File_Chooser did not allow manual entry of a drive
	  letter (STR #339)
	- Fl_Menu now uses the boxtype to redraw the menu
	  background (STR #204)
	- Fl_Scroll now shows the background image when a framed
	  box type is used and the Fl_Scroll is a direct
	  decendent of a window (STR #205)
	- Added a new_directory_tooltip string pointer to allow